# housing-scrape

./: .gitignore  Makefile  README.md  app.py  fetch.py  pyproject.toml  requirements.txt
api/: constants.py  errors.py  logger.py  utils.py
api/models/payloads/: search_results.py
api/routes/v1/: city_list.py  search_props.py
api/src/scraper/: city_list.py  search_results.py
data/requests/: requests_utils.json
data/requests/city_list/: requests.curl  requests.data
data/requests/search_results/: requests.curl  requests.curl.copy  requests.data
